# trustcall

./: AGENTS.md  Makefile  README.md  multiple_objects_demo.py  pyproject.toml
.github/workflows/: eval.yml  test.yml
tests/: conftest.py
tests/cassettes/: 4920534c-717b-49cf-9e61-9d6b5ccdc053.yaml
tests/evals/: test_evals.py  test_extraction.py
tests/evals/cassettes/: 4920534c-717b-49cf-9e61-9d6b5ccdc053.yaml  943fdfab-14d5-4bc3-b1c8-392ccbbd2e42.yaml  9f8f7fd4-cdb7-46b6-9498-2d7ac1068169.yaml  fc7c3b28-9b98-4a8f-828a-20e9cd8a9664.yaml
tests/unit_tests/: test_extraction.py  test_extraction.py.backup  test_strict_existing.py  test_utils.py
trustcall/: __init__.py  _base.py  extract.py  patch.py  schema.py  states.py  tools.py  types.py  utils.py  validation.py
