[tool.poetry]
name = "trustcall"
version = "0.0.22"
description = "Tenacious & trustworthy tool calling built on LangGraph."
authors = ["William Fu-Hinthorn <13333726+hinthornw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langgraph = ">=0.2.25"
dydantic = "^0.0.7"
jsonpatch = "^1.33"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-socket = "^0.7.0"
pytest-xdist = "^3.6.1"
langchain = "^0.3"
langchain-openai = "^0.2"
langchain-fireworks = "^0.2"
langchain-anthropic = "^0.2"
pytest-asyncio-cooperative = "^0.36.0"
vcrpy = "^6.0.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
asyncio_mode = "auto"
