[project]
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
dependencies = [
    "langgraph>=0.2.25",
    "dydantic<1.0.0,>=0.0.7",
    "jsonpatch<2.0,>=1.33",
]
name = "trustcall"
version = "0.0.26"
description = "Tenacious & trustworthy tool calling built on LangGraph."
readme = "README.md"


[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.4.10",
    "mypy<2.0.0,>=1.10.1",
    "pytest<9.0.0,>=8.2.2",
    "pytest-socket<1.0.0,>=0.7.0",
    "pytest-xdist<4.0.0,>=3.6.1",
    "langchain<1.0,>=0.3",
    "langchain-openai<1.0,>=0.2",
    "langchain-fireworks<1.0,>=0.2",
    "langchain-anthropic<1.0,>=0.2",
    "vcrpy<7.0.0,>=6.0.1",
    "pytest-asyncio>=0.23.7,<1.0.0",
    "trustcall",
]

[tool.setuptools]
packages = ["trustcall"]
[tool.setuptools.package-dir]
"trustcall" = "trustcall"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
trustcall = { workspace = true }
